--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ margin-bottom: 0;
   }
 }  
     @media screen and (min-width: 800px) {
-   #subhead {
-        background-color: aqua;
+      #subhead, p {
       width: 600px;
   }
 }  
